--- a/index.html
+++ b/index.html
@@ -66,20 +66,57 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
 
+                <!-- Store Products -->
                 <div class="store-products">
                     <div class="product-content">
                         <div class="product-tag">
-                            <img src="" alt="">
+                            <img src="./images/A1.jpg" alt="">
                             <div class="text">
                                 <p>A steel water bottle</p>
                                 <p>$20.00</p>
                             </div>
                         </div>
+                        <div class="product-tag">
+                            <img src="./images/A1.jpg" alt="">
+                            <div class="text">
+                                <p>A steel water bottle</p>
+                                <p>$20.00</p>
+                            </div>
+                        </div>
+                        <div class="product-tag">
+                            <img src="./images/A1.jpg" alt="">
+                            <div class="text">
+                                <p>A steel water bottle</p>
+                                <p>$20.00</p>
+                            </div>
+                        </div>
+                        <div class="product-tag">
+                            <img src="./images/A1.jpg" alt="">
+                            <div class="text">
+                                <p>A steel water bottle</p>
+                                <p>$20.00</p>
+                            </div>
+                        </div>
+                        <div class="product-tag">
+                            <img src="./images/A1.jpg" alt="">
+                            <div class="text">
+                                <p>A steel water bottle</p>
+                                <p>$20.00</p>
+                            </div>
+                        </div>
+                        <div class="product-tag">
+                            <img src="./images/A1.jpg" alt="">
+                            <div class="text">
+                                <p>A steel water bottle</p>
+                                <p>$20.00</p>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
+
             </div>
         </div>
         
