--- a/index.html
+++ b/index.html
@@ -72,49 +72,83 @@
                 <div class="store-products">
                     <div class="product-content">
                         <div class="product-tag">
-                            <img src="./images/A1.jpg" alt="">
+                            <img src="./project-images/bottle edit.png" alt="">
+                            <!-- <button class="add">
+                                <img src="./icons/add-2.svg" alt="">
+                            </button> -->
                             <div class="text">
                                 <p>A steel water bottle</p>
-                                <p>$20.00</p>
+                                <p class="price">$20.00</p>
                             </div>
                         </div>
                         <div class="product-tag">
-                            <img src="./images/A1.jpg" alt="">
+                            <img src="./project-images/brush edit.png" alt="">
                             <div class="text">
                                 <p>A steel water bottle</p>
-                                <p>$20.00</p>
+                                <p class="price">$20.00</p>
                             </div>
                         </div>
                         <div class="product-tag">
-                            <img src="./images/A1.jpg" alt="">
+                            <img src="./project-images/brush edit.png" alt="">
                             <div class="text">
                                 <p>A steel water bottle</p>
-                                <p>$20.00</p>
+                                <p class="price">$20.00</p>
                             </div>
                         </div>
                         <div class="product-tag">
-                            <img src="./images/A1.jpg" alt="">
+                            <img src="./project-images/brush edit.png" alt="">
                             <div class="text">
                                 <p>A steel water bottle</p>
-                                <p>$20.00</p>
+                                <p class="price">$20.00</p>
                             </div>
                         </div>
                         <div class="product-tag">
-                            <img src="./images/A1.jpg" alt="">
+                            <img src="./project-images/bag edit.png" alt="">
                             <div class="text">
                                 <p>A steel water bottle</p>
-                                <p>$20.00</p>
+                                <p class="price">$20.00</p>
                             </div>
                         </div>
                         <div class="product-tag">
-                            <img src="./images/A1.jpg" alt="">
+                            <img src="./project-images/bottle edit.png" alt="">
                             <div class="text">
                                 <p>A steel water bottle</p>
-                                <p>$20.00</p>
+                                <p class="price">$20.00</p>
                             </div>
                         </div>
-                        
+                        <div class="product-tag">
+                            <img src="./project-images/book edit.png" alt="">
+                            <div class="text">
+                                <p>A steel water bottle</p>
+                                <p class="price">$20.00</p>
+                            </div>
+                        </div>
+                        <div class="product-tag">
+                            <img src="./project-images/cream' edit.png" alt="">
+                            <div class="text">
+                                <p>A steel water bottle</p>
+                                <p class="price">$20.00</p>
+                            </div>
+                        </div>
+                        <div class="product-tag">
+                            <img src="./project-images/cream' edit.png" alt="">
+                            <div class="text">
+                                <p>A steel water bottle</p>
+                                <p class="price">$20.00</p>
+                            </div>
+                        </div>
+                        <div class="product-tag">
+                            <img src="./project-images/cream' edit.png" alt="">
+                            <div class="text">
+                                <p>A steel water bottle</p>
+                                <p class="price">$20.00</p>
+                            </div>
+                        </div>
+
                     </div>
+
+                    
+
                 </div>
 
             </div>
