--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 </head>
 <body>
 
-    <header>
         <nav class="navbar">
-            <h1>
-                <img class="leaf" src="./icons/Leaf.png" alt="">
-                <a href="./index.html">EcoGoods</a>
-            </h1>
             <div class="navbar-contents">
-                <button class="menu-btn" id="menu-btn">
-                    <img class="open-btn" src="./icons/menu.svg" alt="">
-                    <img class="close-btn" src="./icons/close.svg" alt="">
-                </button>
+                <div class="first">
+                    <h1>
+                        <img class="leaf" src="./icons/Leaf.png" alt="">
+                        <a href="./index.html">EcoGoods</a>
+                    </h1>
+                    <button class="menu-btn" id="menu-btn">
+                        <img class="open-btn" src="./icons/menu.svg" alt="">
+                        <img class="close-btn" src="./icons/close.svg" alt="">
+                    </button>
+                </div>
                 <ul class="menu" id="menu">
                     <li class="nav-list"><a href="./products/index.html">product</a></li>
-                    <li class="nav-list"><a href="#">about</a></li>
-                    <li class="nav-list"><a href="#">contact</a></li>
+                    <li class="nav-list"><a href="./">cart</a></li>
                 </ul>
                 <div class="search-icon">
                     <button class="search">
@@ -41,7 +41,6 @@
                     </button>
                 </div>
             </div>
-            
             
         </nav>
 
@@ -179,7 +178,6 @@
             </div>
         </div>
 
-    </header>
 
     <div class="store-footer">
         <div class="footer-content">
